syntax = "proto3";
package influxdata.iox.querier.v1;
option go_package = "github.com/influxdata/iox/querier/v1";

// Request body for ticket in "end-user to querier" flight requests.
message ReadInfo {
  // Namespace(/database) name.
  string namespace_name = 1;

  // SQL query.
  string sql_query = 2;
}

// Response in "end-user to querier" flight response.
//
// Currently this does not contain any metadata, but IOx might provide metadata like data lineage information,
// statistics or watermark information in the future.
message AppMetadata {}
